--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 
     <!--Progress Bar-->
     <div class="container content-start">
-      <div class="progress-texts text-center mb-5">
-        <h3>Sistem durumu kontrol ediliyor</h3>
+      <div class="progress-texts text-center mb-4">
+        <h3 id="progress-message">Sistem durumu kontrol ediliyor</h3>
       </div>
-
       <div class="progress" style="height: 20px">
         <div
           id="progress-bar"
