--- a/index.html
+++ b/index.html
@@ -20,26 +20,8 @@
       <div><a href="#" class="text-decoration-none header-a">Oturum aç</a></div>
     </div>
 
-    <!--Progress Bar-->
-    <div class="container content-start">
-      <div class="progress-texts text-center mb-4">
-        <h3 id="progress-message">Sistem durumu kontrol ediliyor</h3>
-      </div>
-      <div class="progress" style="height: 20px">
-        <div
-          id="progress-bar"
-          class="progress-bar progress-bar-striped progress-bar-animated"
-          role="progressbar"
-          style="width: 0%"
-          aria-valuenow="0"
-          aria-valuemin="0"
-          aria-valuemax="100"
-        ></div>
-      </div>
-    </div>
-
     <!--Content-->
-    <div id="main-content-1" class="container content-start d-none">
+    <div id="main-content-1" class="container content-start">
       <div id="status-container" class="status-container">
         <div class="check-icon" style="display: none">
           <img src="/icons/check-icon.svg" alt="" />
@@ -94,7 +76,7 @@
     </div>
 
     <!--Table-->
-    <div id="main-content-2" class="container mt-5 d-none">
+    <div id="main-content-2" class="container mt-5">
       <div class="status-card texts-market">
         <h5 class="status-title">Hizmetler</h5>
         <table class="status-table">
@@ -198,7 +180,7 @@
                       alt=""
                     />
                   </div>
-                  <div class="td-content-texts">
+                  <div class="td-content-texts last-td">
                     <p class="text-start m-0 operationName">
                       Reports and Dashboards
                     </p>
@@ -215,7 +197,7 @@
     </div>
 
     <!--Footer-->
-    <div id="main-content-3" class="container mt-5 d-none">
+    <div id="main-content-3" class="container mt-5">
       <div
         class="foot-text d-flex justify-content-center flex-column texts-market"
       >
